@@ -1,8 +1,6 @@
 package ar.edu.itba.paw.webapp.filters;
 
 import ar.edu.itba.paw.webapp.auth.JwtTokenUtil;
-import com.sun.tools.javac.util.List;
-import com.sun.xml.internal.rngom.parse.host.Base;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.access.annotation.Secured;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -15,7 +13,6 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
-
 import javax.annotation.Priority;
 import javax.servlet.FilterChain;
 import javax.servlet.ServletException;
@@ -26,6 +23,7 @@ import javax.ws.rs.core.HttpHeaders;
 import javax.ws.rs.ext.Provider;
 import java.io.IOException;
 import java.util.Base64;
+import java.util.Collections;
 
 @Secured({})
 @Provider
@@ -45,62 +43,65 @@ public class TokenAuthenticationFilter extends OncePerRequestFilter {
         if (isEmpty(header)) {
             filterChain.doFilter(request, response);
             return;
+        } else if (header.startsWith("Basic ")) {
+            tryBasicAuthentication(header, request, response);
+        } else if (header.startsWith("Bearer ")) {
+            tryBearerAuthentication(header, request);
         }
 
-        if (!header.startsWith("Bearer ")) {
-            if (!header.startsWith("Basic ")) {
-                filterChain.doFilter(request, response);
-                return;
-            }
+        filterChain.doFilter(request, response);
+    }
 
-            String encodedCredentials = header.split(" ")[1];
-            String[] credentials = new String(Base64.getDecoder().decode(encodedCredentials)).split(":");
-            if (credentials.length != 2) {
-                filterChain.doFilter(request, response);
-                return;
-            }
-
-            String username = credentials[0].trim();
-            String password = credentials[1].trim();
-            try {
-                Authentication authenticate = authenticationManager
-                        .authenticate(new UsernamePasswordAuthenticationToken(username, password));
-
-                UserDetails user = (UserDetails) authenticate.getPrincipal();
-                response.setHeader(HttpHeaders.AUTHORIZATION, JwtTokenUtil.generateAccessToken(user));
-                return;
-            } catch (BadCredentialsException ex) {
-                filterChain.doFilter(request, response);
-                return;
-            }
-        }
-
+    private void tryBearerAuthentication(String header, HttpServletRequest request) {
         // Get jwt token and validate
         final String token = header.split(" ")[1].trim();
-        if (!JwtTokenUtil.validate(token)) {
-            filterChain.doFilter(request, response);
+        if (!JwtTokenUtil.validate(token))
             return;
-        }
 
         // Get user identity and set it on the spring security context
         UserDetails userDetails = userDetailsService.loadUserByUsername(JwtTokenUtil.getUsername(token));
 
-        UsernamePasswordAuthenticationToken
-                authentication = new UsernamePasswordAuthenticationToken(
+        UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
                 userDetails, null,
-                userDetails == null ?
-                        List.of(null) : userDetails.getAuthorities()
+                userDetails == null ? Collections.emptyList() : userDetails.getAuthorities()
         );
 
         authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
 
         SecurityContextHolder.getContext().setAuthentication(authentication);
-        filterChain.doFilter(request, response);
+    }
+
+    private void tryBasicAuthentication(String header, HttpServletRequest request, HttpServletResponse response) {
+        String encodedCredentials = header.split(" ")[1];
+        try {
+            String[] credentials = new String(Base64.getDecoder().decode(encodedCredentials)).split(":");
+            if (credentials.length != 2)
+                return;
+
+            String username = credentials[0].trim();
+            String password = credentials[1].trim();
+
+            UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+                    username, password
+            );
+
+            Authentication authenticate = authenticationManager
+                    .authenticate(authentication);
+
+            UserDetails user = (UserDetails) authenticate.getPrincipal();
+            response.setHeader(HttpHeaders.AUTHORIZATION, JwtTokenUtil.generateAccessToken(user));
+
+            authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+
+            SecurityContextHolder.getContext().setAuthentication(authentication);
+
+        } catch (BadCredentialsException | IllegalArgumentException ignored) {
+
+        } // TODO ver de informar que no se mandó bien el token base64
+
     }
 
     private boolean isEmpty(String header) {
         return header == null || header.isEmpty();
     }
-
-
 }
